--- a/src/styling/home.css
+++ b/src/styling/home.css
@@ -26,7 +26,7 @@
   margin-top: 0;
   font-weight: 900;
   letter-spacing: -4px;
-  color: rgb(17, 17, 17);
+  color: #6a5acd;
   text-decoration: underline;
 }
 
@@ -43,7 +43,7 @@
   margin: 15px auto 0px auto;
   padding: 15px 0;
   border: none;
-  background: rgb(17, 17, 17);
+  background: #6a5acd;
   font-family: "Inter";
   color: white;
   font-size: 15px;
